--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:unit": "jest -c jest-unit-config.js"
+    "test:unit": "jest -c jest-unit.config.js"
   },
   "ts-standard": {
     "ignore": [
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-standard": "^11.0.0",
     "typescript": "^4.5.5"
   }
