--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "test": "jest",
     "test:unit": "jest -c jest-unit.config.js"
   },
-  "ts-standard": {
-    "ignore": [
-      "dist"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kdhttps/node-ts-clean-api.git"
@@ -27,9 +22,18 @@
   "homepage": "https://github.com/kdhttps/node-ts-clean-api#readme",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
+    "prettier": "2.6.1",
     "ts-jest": "^27.1.3",
-    "ts-standard": "^11.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   }
 }
